# iyiyse-cennete-gitsin

./: PHASE_1_DATA_MODEL.md   PHASE_2_INPUT_ENGINE.md  PHASE_3_RENDER_CORE final versiyon kopyası.md  PHASE_3_RENDER_CORE final versiyon.md  PROGRESS.md  README.md  agents.md
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  DrawingEngine.cpp  DrawingEngine.h  drawing_engine_jni.cpp
app/src/main/cpp/include/core/: SkBlendMode.h  SkCanvas.h  SkImage.h  SkMatrix.h  SkPaint.h  SkPath.h  SkPoint.h  SkRect.h  SkRefCnt.h  SkSurface.h  SkVertices.h
app/src/main/cpp/include/gpu/: GrBackendSurface.h  GrDirectContext.h
app/src/main/cpp/tools/: BallpointRenderer.cpp  BallpointRenderer.h  EraserRenderer.cpp  EraserRenderer.h  HighlighterRenderer.cpp  HighlighterRenderer.h  IToolRenderer.h  ToolRendererFactory.h
app/src/main/java/com/notia/: MainActivity.kt
app/src/main/java/com/notia/domain/model/: DrawingDataModels.kt
app/src/main/java/com/notia/input/: DynamicInputSampler.kt
app/src/main/java/com/notia/ui/theme/: Color.kt  Theme.kt  Type.kt
eski fazlar/: PHASE_1_DATA_MODEL v-sonnet.md  PHASE_1_DATA_MODEL.md  kopyası  PHASE_3_RENDER_CORE.md  PHASE_4_TOOL_STRATEGY.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
Çizim Motoru FAZLAR/: PHASE_1_DATA_MODEL v-gemini final .md  PHASE_1_DATA_MODEL v-sonnet final kopyası.md  PHASE_2_INPUT_ENGINE son.md  PHASE_3_RENDER_CORE final versiyon kopyası.md  PHASE_4_TOOL_STRATEGY final versiyon.md
